--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title> Test </title>
+        <link rel="stylesheet" href="index.css">
     </head>
-    <body>
-        <h1>TTTTest</h1>
+    <body style="background-image: url('./img/background.jpg'); width: 100%; height: 100%;">
+        <h1> 수원 삼성 블루윙즈 </h1>
+        <div id="sing">
+            2부 강등팀<br><br><br>
+        </div>
+        <div style="display:grid; grid-template-columns: 1fr 1fr 1fr;">
+            <a href="http://www.bluewings.kr/home" class="img_text">
+                <div>공식 홈페이지</div>
+                <img src="./img/homepage.png">
+            </a>
+
+            <a href="./player.html" class="img_text">
+                <div>선수단</div>
+                <img src="./img/players.png">
+            </a>
+
+            <a href="http://www.bluewingsshop.com/index.html" class="img_text">
+                <div>공식 쇼핑몰</div>
+                <img src="./img/shoppingmall.png">
+            </a>
+        </div>
     </body>
 </html>
