--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Test </title>
-        <link rel="stylesheet" href="index.css">
+        <title> 박성률 포트폴리오 </title>
+        <link rel="stylesheet" href="/index.css">
     </head>
-    <body style="background-image: url('./img/background.jpg'); width: 100%; height: 100%;">
-        <h1> 수원 삼성 블루윙즈 </h1>
-        <div id="sing">
-            2부 강등팀<br><br><br>
+    <body>
+        <h1>박성률 포트폴리오</h1>
+        <div id="txt_welcome">
+            <br> <br> <br>
         </div>
         <div style="display:grid; grid-template-columns: 1fr 1fr 1fr;">
-            <a href="http://www.bluewings.kr/home" class="img_text">
-                <div>공식 홈페이지</div>
-                <img src="./img/homepage.png">
-            </a>
-
-            <a href="./player.html" class="img_text">
-                <div>선수단</div>
-                <img src="./img/players.png">
-            </a>
-
-            <a href="http://www.bluewingsshop.com/index.html" class="img_text">
-                <div>공식 쇼핑몰</div>
-                <img src="./img/shoppingmall.png">
-            </a>
+            <div class="card">
+                <img class="card_img" src="./img/profile.png">
+                <p></p>
+                <input class="card_button" type="button" value="Profile" onclick="">
+            </div>
+            <div class="card">
+                <img class="card_img" src="./img/project.jpg">
+                <p>  </p>
+                <input class="card_button" type="button" value="Project" onclick="">
+            </div>
+            <div class="card">
+                <img class="card_img" src="./img/blog.png">
+                <p></p>
+                <input class="card_button" type="button" value="Blog" onclick="">
+            </div>
         </div>
     </body>
 </html>
